// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Discover component should be rendered correctly with apps 1`] = `
<div
  className="sto-discover"
>
  <div>
    <div
      className="sto-discover-sections"
    >
      <Wrapper
        allApps={
          Array [
            Object {
              "categories": Array [
                "cozy",
              ],
              "developer": Object {
                "name": "Cozy",
              },
              "editor": "Cozy",
              "icon": "<svg></svg>",
              "installed": true,
              "isInRegistry": true,
              "name": "Collect",
              "name_prefix": "Cozy",
              "permissions": Object {
                "mock": Object {
                  "type": "io.mock.doctype",
                },
                "mock2": Object {
                  "type": "io.mock.doctype2",
                },
              },
              "related": "http://collect.cozy.mock/",
              "slug": "collect",
              "tags": Array [
                "konnector",
                "collect",
                "bills",
                "providers",
                "files",
              ],
              "type": "webapp",
              "uninstallable": false,
              "version": "3.0.0",
              "versions": Object {
                "beta": Array [
                  "3.0.0",
                ],
                "dev": Array [
                  "3.0.0",
                ],
                "stable": Array [
                  "3.0.0",
                ],
              },
            },
            Object {
              "categories": Array [
                "isp",
                "telecom",
              ],
              "developer": Object {
                "name": "Cozy",
              },
              "icon": "<svg></svg>",
              "isInRegistry": true,
              "name": "Bouilligue",
              "slug": "konnector-bouilligue",
              "type": "konnector",
              "uninstallable": true,
              "versions": Object {
                "beta": Array [
                  "0.1.0",
                ],
                "dev": Array [
                  "0.1.0",
                ],
                "stable": Array [
                  "0.1.0",
                ],
              },
            },
            Object {
              "categories": Array [
                "transport",
              ],
              "developer": Object {
                "name": "Cozy",
              },
              "icon": "<svg></svg>",
              "installed": true,
              "isInRegistry": true,
              "name": "Trinlane",
              "permissions": Object {
                "mock": Object {
                  "type": "io.mock.doctype",
                },
              },
              "slug": "konnector-trinlane",
              "tags": Array [
                "transport",
                "files",
                "bills",
              ],
              "type": "konnector",
              "uninstallable": true,
              "version": "0.1.0",
              "versions": Object {
                "beta": Array [
                  "0.1.0",
                ],
                "dev": Array [
                  "0.1.0",
                ],
                "stable": Array [
                  "0.1.0",
                ],
              },
            },
            Object {
              "categories": Array [
                "cozy",
              ],
              "developer": Object {
                "name": "Cozy",
              },
              "editor": "Cozy",
              "icon": "<svg></svg>",
              "isInRegistry": true,
              "name": "Photos",
              "name_prefix": "Cozy",
              "slug": "photos",
              "type": "webapp",
              "uninstallable": true,
              "versions": Object {
                "beta": Array [
                  "3.0.0",
                ],
                "dev": Array [
                  "3.0.0",
                ],
                "stable": Array [
                  "3.0.0",
                ],
              },
            },
            Object {
              "categories": Array [
                "partners",
              ],
              "icon": "<svg></svg>",
              "isInRegistry": true,
              "name": "Tasky",
              "slug": "tasky",
              "type": "webapp",
              "uninstallable": true,
              "versions": Object {
                "beta": Array [
                  "1.0.0",
                ],
                "dev": Array [
                  "1.0.0",
                ],
                "stable": Array [
                  "1.0.0",
                ],
              },
            },
          ]
        }
        apps={
          Array [
            Object {
              "categories": Array [
                "cozy",
              ],
              "developer": Object {
                "name": "Cozy",
              },
              "editor": "Cozy",
              "icon": "<svg></svg>",
              "installed": true,
              "isInRegistry": true,
              "name": "Collect",
              "name_prefix": "Cozy",
              "permissions": Object {
                "mock": Object {
                  "type": "io.mock.doctype",
                },
                "mock2": Object {
                  "type": "io.mock.doctype2",
                },
              },
              "related": "http://collect.cozy.mock/",
              "slug": "collect",
              "tags": Array [
                "konnector",
                "collect",
                "bills",
                "providers",
                "files",
              ],
              "type": "webapp",
              "uninstallable": false,
              "version": "3.0.0",
              "versions": Object {
                "beta": Array [
                  "3.0.0",
                ],
                "dev": Array [
                  "3.0.0",
                ],
                "stable": Array [
                  "3.0.0",
                ],
              },
            },
            Object {
              "categories": Array [
                "isp",
                "telecom",
              ],
              "developer": Object {
                "name": "Cozy",
              },
              "icon": "<svg></svg>",
              "isInRegistry": true,
              "name": "Bouilligue",
              "slug": "konnector-bouilligue",
              "type": "konnector",
              "uninstallable": true,
              "versions": Object {
                "beta": Array [
                  "0.1.0",
                ],
                "dev": Array [
                  "0.1.0",
                ],
                "stable": Array [
                  "0.1.0",
                ],
              },
            },
            Object {
              "categories": Array [
                "transport",
              ],
              "developer": Object {
                "name": "Cozy",
              },
              "icon": "<svg></svg>",
              "installed": true,
              "isInRegistry": true,
              "name": "Trinlane",
              "permissions": Object {
                "mock": Object {
                  "type": "io.mock.doctype",
                },
              },
              "slug": "konnector-trinlane",
              "tags": Array [
                "transport",
                "files",
                "bills",
              ],
              "type": "konnector",
              "uninstallable": true,
              "version": "0.1.0",
              "versions": Object {
                "beta": Array [
                  "0.1.0",
                ],
                "dev": Array [
                  "0.1.0",
                ],
                "stable": Array [
                  "0.1.0",
                ],
              },
            },
            Object {
              "categories": Array [
                "cozy",
              ],
              "developer": Object {
                "name": "Cozy",
              },
              "editor": "Cozy",
              "icon": "<svg></svg>",
              "isInRegistry": true,
              "name": "Photos",
              "name_prefix": "Cozy",
              "slug": "photos",
              "type": "webapp",
              "uninstallable": true,
              "versions": Object {
                "beta": Array [
                  "3.0.0",
                ],
                "dev": Array [
                  "3.0.0",
                ],
                "stable": Array [
                  "3.0.0",
                ],
              },
            },
            Object {
              "categories": Array [
                "partners",
              ],
              "icon": "<svg></svg>",
              "isInRegistry": true,
              "name": "Tasky",
              "slug": "tasky",
              "type": "webapp",
              "uninstallable": true,
              "versions": Object {
                "beta": Array [
                  "1.0.0",
                ],
                "dev": Array [
                  "1.0.0",
                ],
                "stable": Array [
                  "1.0.0",
                ],
              },
            },
          ]
        }
        error={null}
        onAppClick={[Function]}
        pushQuery={[Function]}
        query={false}
      />
    </div>
    <Wrapper />
  </div>
  <withRouter(Wrapper)
    actionError={null}
    apps={
      Array [
        Object {
          "categories": Array [
            "cozy",
          ],
          "developer": Object {
            "name": "Cozy",
          },
          "editor": "Cozy",
          "icon": "<svg></svg>",
          "installed": true,
          "isInRegistry": true,
          "name": "Collect",
          "name_prefix": "Cozy",
          "permissions": Object {
            "mock": Object {
              "type": "io.mock.doctype",
            },
            "mock2": Object {
              "type": "io.mock.doctype2",
            },
          },
          "related": "http://collect.cozy.mock/",
          "slug": "collect",
          "tags": Array [
            "konnector",
            "collect",
            "bills",
            "providers",
            "files",
          ],
          "type": "webapp",
          "uninstallable": false,
          "version": "3.0.0",
          "versions": Object {
            "beta": Array [
              "3.0.0",
            ],
            "dev": Array [
              "3.0.0",
            ],
            "stable": Array [
              "3.0.0",
            ],
          },
        },
        Object {
          "categories": Array [
            "isp",
            "telecom",
          ],
          "developer": Object {
            "name": "Cozy",
          },
          "icon": "<svg></svg>",
          "isInRegistry": true,
          "name": "Bouilligue",
          "slug": "konnector-bouilligue",
          "type": "konnector",
          "uninstallable": true,
          "versions": Object {
            "beta": Array [
              "0.1.0",
            ],
            "dev": Array [
              "0.1.0",
            ],
            "stable": Array [
              "0.1.0",
            ],
          },
        },
        Object {
          "categories": Array [
            "transport",
          ],
          "developer": Object {
            "name": "Cozy",
          },
          "icon": "<svg></svg>",
          "installed": true,
          "isInRegistry": true,
          "name": "Trinlane",
          "permissions": Object {
            "mock": Object {
              "type": "io.mock.doctype",
            },
          },
          "slug": "konnector-trinlane",
          "tags": Array [
            "transport",
            "files",
            "bills",
          ],
          "type": "konnector",
          "uninstallable": true,
          "version": "0.1.0",
          "versions": Object {
            "beta": Array [
              "0.1.0",
            ],
            "dev": Array [
              "0.1.0",
            ],
            "stable": Array [
              "0.1.0",
            ],
          },
        },
        Object {
          "categories": Array [
            "cozy",
          ],
          "developer": Object {
            "name": "Cozy",
          },
          "editor": "Cozy",
          "icon": "<svg></svg>",
          "isInRegistry": true,
          "name": "Photos",
          "name_prefix": "Cozy",
          "slug": "photos",
          "type": "webapp",
          "uninstallable": true,
          "versions": Object {
            "beta": Array [
              "3.0.0",
            ],
            "dev": Array [
              "3.0.0",
            ],
            "stable": Array [
              "3.0.0",
            ],
          },
        },
        Object {
          "categories": Array [
            "partners",
          ],
          "icon": "<svg></svg>",
          "isInRegistry": true,
          "name": "Tasky",
          "slug": "tasky",
          "type": "webapp",
          "uninstallable": true,
          "versions": Object {
            "beta": Array [
              "1.0.0",
            ],
            "dev": Array [
              "1.0.0",
            ],
            "stable": Array [
              "1.0.0",
            ],
          },
        },
      ]
    }
    isFetching={false}
    parent="discover"
  />
</div>
`;

exports[`Discover component should be rendered correctly with apps and URL search params 1`] = `
<div
  className="sto-discover"
>
  <div>
    <div
      className="sto-discover-sections"
    >
      <Wrapper
        allApps={
          Array [
            Object {
              "categories": Array [
                "cozy",
              ],
              "developer": Object {
                "name": "Cozy",
              },
              "editor": "Cozy",
              "icon": "<svg></svg>",
              "installed": true,
              "isInRegistry": true,
              "name": "Collect",
              "name_prefix": "Cozy",
              "permissions": Object {
                "mock": Object {
                  "type": "io.mock.doctype",
                },
                "mock2": Object {
                  "type": "io.mock.doctype2",
                },
              },
              "related": "http://collect.cozy.mock/",
              "slug": "collect",
              "tags": Array [
                "konnector",
                "collect",
                "bills",
                "providers",
                "files",
              ],
              "type": "webapp",
              "uninstallable": false,
              "version": "3.0.0",
              "versions": Object {
                "beta": Array [
                  "3.0.0",
                ],
                "dev": Array [
                  "3.0.0",
                ],
                "stable": Array [
                  "3.0.0",
                ],
              },
            },
            Object {
              "categories": Array [
                "isp",
                "telecom",
              ],
              "developer": Object {
                "name": "Cozy",
              },
              "icon": "<svg></svg>",
              "isInRegistry": true,
              "name": "Bouilligue",
              "slug": "konnector-bouilligue",
              "type": "konnector",
              "uninstallable": true,
              "versions": Object {
                "beta": Array [
                  "0.1.0",
                ],
                "dev": Array [
                  "0.1.0",
                ],
                "stable": Array [
                  "0.1.0",
                ],
              },
            },
            Object {
              "categories": Array [
                "transport",
              ],
              "developer": Object {
                "name": "Cozy",
              },
              "icon": "<svg></svg>",
              "installed": true,
              "isInRegistry": true,
              "name": "Trinlane",
              "permissions": Object {
                "mock": Object {
                  "type": "io.mock.doctype",
                },
              },
              "slug": "konnector-trinlane",
              "tags": Array [
                "transport",
                "files",
                "bills",
              ],
              "type": "konnector",
              "uninstallable": true,
              "version": "0.1.0",
              "versions": Object {
                "beta": Array [
                  "0.1.0",
                ],
                "dev": Array [
                  "0.1.0",
                ],
                "stable": Array [
                  "0.1.0",
                ],
              },
            },
            Object {
              "categories": Array [
                "cozy",
              ],
              "developer": Object {
                "name": "Cozy",
              },
              "editor": "Cozy",
              "icon": "<svg></svg>",
              "isInRegistry": true,
              "name": "Photos",
              "name_prefix": "Cozy",
              "slug": "photos",
              "type": "webapp",
              "uninstallable": true,
              "versions": Object {
                "beta": Array [
                  "3.0.0",
                ],
                "dev": Array [
                  "3.0.0",
                ],
                "stable": Array [
                  "3.0.0",
                ],
              },
            },
            Object {
              "categories": Array [
                "partners",
              ],
              "icon": "<svg></svg>",
              "isInRegistry": true,
              "name": "Tasky",
              "slug": "tasky",
              "type": "webapp",
              "uninstallable": true,
              "versions": Object {
                "beta": Array [
                  "1.0.0",
                ],
                "dev": Array [
                  "1.0.0",
                ],
                "stable": Array [
                  "1.0.0",
                ],
              },
            },
          ]
        }
        apps={
          Array [
            Object {
              "categories": Array [
                "cozy",
              ],
              "developer": Object {
                "name": "Cozy",
              },
              "editor": "Cozy",
              "icon": "<svg></svg>",
              "installed": true,
              "isInRegistry": true,
              "name": "Collect",
              "name_prefix": "Cozy",
              "permissions": Object {
                "mock": Object {
                  "type": "io.mock.doctype",
                },
                "mock2": Object {
                  "type": "io.mock.doctype2",
                },
              },
              "related": "http://collect.cozy.mock/",
              "slug": "collect",
              "tags": Array [
                "konnector",
                "collect",
                "bills",
                "providers",
                "files",
              ],
              "type": "webapp",
              "uninstallable": false,
              "version": "3.0.0",
              "versions": Object {
                "beta": Array [
                  "3.0.0",
                ],
                "dev": Array [
                  "3.0.0",
                ],
                "stable": Array [
                  "3.0.0",
                ],
              },
            },
            Object {
              "categories": Array [
                "cozy",
              ],
              "developer": Object {
                "name": "Cozy",
              },
              "editor": "Cozy",
              "icon": "<svg></svg>",
              "isInRegistry": true,
              "name": "Photos",
              "name_prefix": "Cozy",
              "slug": "photos",
              "type": "webapp",
              "uninstallable": true,
              "versions": Object {
                "beta": Array [
                  "3.0.0",
                ],
                "dev": Array [
                  "3.0.0",
                ],
                "stable": Array [
                  "3.0.0",
                ],
              },
            },
          ]
        }
        error={null}
        onAppClick={[Function]}
        pushQuery={[Function]}
        query="?category=cozy"
      />
    </div>
    <Wrapper />
  </div>
  <withRouter(Wrapper)
    actionError={null}
    apps={
      Array [
        Object {
          "categories": Array [
            "cozy",
          ],
          "developer": Object {
            "name": "Cozy",
          },
          "editor": "Cozy",
          "icon": "<svg></svg>",
          "installed": true,
          "isInRegistry": true,
          "name": "Collect",
          "name_prefix": "Cozy",
          "permissions": Object {
            "mock": Object {
              "type": "io.mock.doctype",
            },
            "mock2": Object {
              "type": "io.mock.doctype2",
            },
          },
          "related": "http://collect.cozy.mock/",
          "slug": "collect",
          "tags": Array [
            "konnector",
            "collect",
            "bills",
            "providers",
            "files",
          ],
          "type": "webapp",
          "uninstallable": false,
          "version": "3.0.0",
          "versions": Object {
            "beta": Array [
              "3.0.0",
            ],
            "dev": Array [
              "3.0.0",
            ],
            "stable": Array [
              "3.0.0",
            ],
          },
        },
        Object {
          "categories": Array [
            "cozy",
          ],
          "developer": Object {
            "name": "Cozy",
          },
          "editor": "Cozy",
          "icon": "<svg></svg>",
          "isInRegistry": true,
          "name": "Photos",
          "name_prefix": "Cozy",
          "slug": "photos",
          "type": "webapp",
          "uninstallable": true,
          "versions": Object {
            "beta": Array [
              "3.0.0",
            ],
            "dev": Array [
              "3.0.0",
            ],
            "stable": Array [
              "3.0.0",
            ],
          },
        },
      ]
    }
    isFetching={false}
    parent="discover"
  />
</div>
`;

exports[`Discover component should display error from props correctly 1`] = `
<div
  className="sto-discover"
>
  <div>
    <div
      className="sto-discover-sections"
    >
      <Wrapper
        allApps={Array []}
        apps={Array []}
        error={[Error: This is a test error]}
        onAppClick={[Function]}
        pushQuery={[Function]}
        query={false}
      />
    </div>
    <Wrapper />
  </div>
  <withRouter(Wrapper)
    actionError={null}
    apps={Array []}
    isFetching={false}
    parent="discover"
  />
</div>
`;

exports[`Discover component should not render apps list if !match.isExact 1`] = `
<div
  className="sto-discover"
>
  <withRouter(Wrapper)
    actionError={null}
    apps={
      Array [
        Object {
          "categories": Array [
            "cozy",
          ],
          "developer": Object {
            "name": "Cozy",
          },
          "editor": "Cozy",
          "icon": "<svg></svg>",
          "installed": true,
          "isInRegistry": true,
          "name": "Collect",
          "name_prefix": "Cozy",
          "permissions": Object {
            "mock": Object {
              "type": "io.mock.doctype",
            },
            "mock2": Object {
              "type": "io.mock.doctype2",
            },
          },
          "related": "http://collect.cozy.mock/",
          "slug": "collect",
          "tags": Array [
            "konnector",
            "collect",
            "bills",
            "providers",
            "files",
          ],
          "type": "webapp",
          "uninstallable": false,
          "version": "3.0.0",
          "versions": Object {
            "beta": Array [
              "3.0.0",
            ],
            "dev": Array [
              "3.0.0",
            ],
            "stable": Array [
              "3.0.0",
            ],
          },
        },
        Object {
          "categories": Array [
            "isp",
            "telecom",
          ],
          "developer": Object {
            "name": "Cozy",
          },
          "icon": "<svg></svg>",
          "isInRegistry": true,
          "name": "Bouilligue",
          "slug": "konnector-bouilligue",
          "type": "konnector",
          "uninstallable": true,
          "versions": Object {
            "beta": Array [
              "0.1.0",
            ],
            "dev": Array [
              "0.1.0",
            ],
            "stable": Array [
              "0.1.0",
            ],
          },
        },
        Object {
          "categories": Array [
            "transport",
          ],
          "developer": Object {
            "name": "Cozy",
          },
          "icon": "<svg></svg>",
          "installed": true,
          "isInRegistry": true,
          "name": "Trinlane",
          "permissions": Object {
            "mock": Object {
              "type": "io.mock.doctype",
            },
          },
          "slug": "konnector-trinlane",
          "tags": Array [
            "transport",
            "files",
            "bills",
          ],
          "type": "konnector",
          "uninstallable": true,
          "version": "0.1.0",
          "versions": Object {
            "beta": Array [
              "0.1.0",
            ],
            "dev": Array [
              "0.1.0",
            ],
            "stable": Array [
              "0.1.0",
            ],
          },
        },
        Object {
          "categories": Array [
            "cozy",
          ],
          "developer": Object {
            "name": "Cozy",
          },
          "editor": "Cozy",
          "icon": "<svg></svg>",
          "isInRegistry": true,
          "name": "Photos",
          "name_prefix": "Cozy",
          "slug": "photos",
          "type": "webapp",
          "uninstallable": true,
          "versions": Object {
            "beta": Array [
              "3.0.0",
            ],
            "dev": Array [
              "3.0.0",
            ],
            "stable": Array [
              "3.0.0",
            ],
          },
        },
        Object {
          "categories": Array [
            "partners",
          ],
          "icon": "<svg></svg>",
          "isInRegistry": true,
          "name": "Tasky",
          "slug": "tasky",
          "type": "webapp",
          "uninstallable": true,
          "versions": Object {
            "beta": Array [
              "1.0.0",
            ],
            "dev": Array [
              "1.0.0",
            ],
            "stable": Array [
              "1.0.0",
            ],
          },
        },
      ]
    }
    isFetching={false}
    parent="discover"
  />
</div>
`;

exports[`Discover component should render correctly a spinner if apps is fetching 1`] = `
<div
  className="sto-discover"
>
  <div>
    <div
      className="sto-discover-sections"
    />
  </div>
  <withRouter(Wrapper)
    actionError={null}
    apps={Array []}
    isFetching={true}
    parent="discover"
  />
  <AppsLoading />
</div>
`;

exports[`Discover component should use BarCenter from cozy-bar in mobile view only 1`] = `
<div
  className="sto-discover"
>
  <div>
    <BarCenter>
      <h2
        className="sto-view-title"
      >
        All
      </h2>
    </BarCenter>
    <div
      className="sto-discover-sections"
    >
      <Wrapper
        allApps={
          Array [
            Object {
              "categories": Array [
                "cozy",
              ],
              "developer": Object {
                "name": "Cozy",
              },
              "editor": "Cozy",
              "icon": "<svg></svg>",
              "installed": true,
              "isInRegistry": true,
              "name": "Collect",
              "name_prefix": "Cozy",
              "permissions": Object {
                "mock": Object {
                  "type": "io.mock.doctype",
                },
                "mock2": Object {
                  "type": "io.mock.doctype2",
                },
              },
              "related": "http://collect.cozy.mock/",
              "slug": "collect",
              "tags": Array [
                "konnector",
                "collect",
                "bills",
                "providers",
                "files",
              ],
              "type": "webapp",
              "uninstallable": false,
              "version": "3.0.0",
              "versions": Object {
                "beta": Array [
                  "3.0.0",
                ],
                "dev": Array [
                  "3.0.0",
                ],
                "stable": Array [
                  "3.0.0",
                ],
              },
            },
            Object {
              "categories": Array [
                "isp",
                "telecom",
              ],
              "developer": Object {
                "name": "Cozy",
              },
              "icon": "<svg></svg>",
              "isInRegistry": true,
              "name": "Bouilligue",
              "slug": "konnector-bouilligue",
              "type": "konnector",
              "uninstallable": true,
              "versions": Object {
                "beta": Array [
                  "0.1.0",
                ],
                "dev": Array [
                  "0.1.0",
                ],
                "stable": Array [
                  "0.1.0",
                ],
              },
            },
            Object {
              "categories": Array [
                "transport",
              ],
              "developer": Object {
                "name": "Cozy",
              },
              "icon": "<svg></svg>",
              "installed": true,
              "isInRegistry": true,
              "name": "Trinlane",
              "permissions": Object {
                "mock": Object {
                  "type": "io.mock.doctype",
                },
              },
              "slug": "konnector-trinlane",
              "tags": Array [
                "transport",
                "files",
                "bills",
              ],
              "type": "konnector",
              "uninstallable": true,
              "version": "0.1.0",
              "versions": Object {
                "beta": Array [
                  "0.1.0",
                ],
                "dev": Array [
                  "0.1.0",
                ],
                "stable": Array [
                  "0.1.0",
                ],
              },
            },
            Object {
              "categories": Array [
                "cozy",
              ],
              "developer": Object {
                "name": "Cozy",
              },
              "editor": "Cozy",
              "icon": "<svg></svg>",
              "isInRegistry": true,
              "name": "Photos",
              "name_prefix": "Cozy",
              "slug": "photos",
              "type": "webapp",
              "uninstallable": true,
              "versions": Object {
                "beta": Array [
                  "3.0.0",
                ],
                "dev": Array [
                  "3.0.0",
                ],
                "stable": Array [
                  "3.0.0",
                ],
              },
            },
            Object {
              "categories": Array [
                "partners",
              ],
              "icon": "<svg></svg>",
              "isInRegistry": true,
              "name": "Tasky",
              "slug": "tasky",
              "type": "webapp",
              "uninstallable": true,
              "versions": Object {
                "beta": Array [
                  "1.0.0",
                ],
                "dev": Array [
                  "1.0.0",
                ],
                "stable": Array [
                  "1.0.0",
                ],
              },
            },
          ]
        }
        apps={
          Array [
            Object {
              "categories": Array [
                "cozy",
              ],
              "developer": Object {
                "name": "Cozy",
              },
              "editor": "Cozy",
              "icon": "<svg></svg>",
              "installed": true,
              "isInRegistry": true,
              "name": "Collect",
              "name_prefix": "Cozy",
              "permissions": Object {
                "mock": Object {
                  "type": "io.mock.doctype",
                },
                "mock2": Object {
                  "type": "io.mock.doctype2",
                },
              },
              "related": "http://collect.cozy.mock/",
              "slug": "collect",
              "tags": Array [
                "konnector",
                "collect",
                "bills",
                "providers",
                "files",
              ],
              "type": "webapp",
              "uninstallable": false,
              "version": "3.0.0",
              "versions": Object {
                "beta": Array [
                  "3.0.0",
                ],
                "dev": Array [
                  "3.0.0",
                ],
                "stable": Array [
                  "3.0.0",
                ],
              },
            },
            Object {
              "categories": Array [
                "isp",
                "telecom",
              ],
              "developer": Object {
                "name": "Cozy",
              },
              "icon": "<svg></svg>",
              "isInRegistry": true,
              "name": "Bouilligue",
              "slug": "konnector-bouilligue",
              "type": "konnector",
              "uninstallable": true,
              "versions": Object {
                "beta": Array [
                  "0.1.0",
                ],
                "dev": Array [
                  "0.1.0",
                ],
                "stable": Array [
                  "0.1.0",
                ],
              },
            },
            Object {
              "categories": Array [
                "transport",
              ],
              "developer": Object {
                "name": "Cozy",
              },
              "icon": "<svg></svg>",
              "installed": true,
              "isInRegistry": true,
              "name": "Trinlane",
              "permissions": Object {
                "mock": Object {
                  "type": "io.mock.doctype",
                },
              },
              "slug": "konnector-trinlane",
              "tags": Array [
                "transport",
                "files",
                "bills",
              ],
              "type": "konnector",
              "uninstallable": true,
              "version": "0.1.0",
              "versions": Object {
                "beta": Array [
                  "0.1.0",
                ],
                "dev": Array [
                  "0.1.0",
                ],
                "stable": Array [
                  "0.1.0",
                ],
              },
            },
            Object {
              "categories": Array [
                "cozy",
              ],
              "developer": Object {
                "name": "Cozy",
              },
              "editor": "Cozy",
              "icon": "<svg></svg>",
              "isInRegistry": true,
              "name": "Photos",
              "name_prefix": "Cozy",
              "slug": "photos",
              "type": "webapp",
              "uninstallable": true,
              "versions": Object {
                "beta": Array [
                  "3.0.0",
                ],
                "dev": Array [
                  "3.0.0",
                ],
                "stable": Array [
                  "3.0.0",
                ],
              },
            },
            Object {
              "categories": Array [
                "partners",
              ],
              "icon": "<svg></svg>",
              "isInRegistry": true,
              "name": "Tasky",
              "slug": "tasky",
              "type": "webapp",
              "uninstallable": true,
              "versions": Object {
                "beta": Array [
                  "1.0.0",
                ],
                "dev": Array [
                  "1.0.0",
                ],
                "stable": Array [
                  "1.0.0",
                ],
              },
            },
          ]
        }
        error={null}
        onAppClick={[Function]}
        pushQuery={[Function]}
        query={false}
      />
    </div>
    <Wrapper />
  </div>
  <withRouter(Wrapper)
    actionError={null}
    apps={
      Array [
        Object {
          "categories": Array [
            "cozy",
          ],
          "developer": Object {
            "name": "Cozy",
          },
          "editor": "Cozy",
          "icon": "<svg></svg>",
          "installed": true,
          "isInRegistry": true,
          "name": "Collect",
          "name_prefix": "Cozy",
          "permissions": Object {
            "mock": Object {
              "type": "io.mock.doctype",
            },
            "mock2": Object {
              "type": "io.mock.doctype2",
            },
          },
          "related": "http://collect.cozy.mock/",
          "slug": "collect",
          "tags": Array [
            "konnector",
            "collect",
            "bills",
            "providers",
            "files",
          ],
          "type": "webapp",
          "uninstallable": false,
          "version": "3.0.0",
          "versions": Object {
            "beta": Array [
              "3.0.0",
            ],
            "dev": Array [
              "3.0.0",
            ],
            "stable": Array [
              "3.0.0",
            ],
          },
        },
        Object {
          "categories": Array [
            "isp",
            "telecom",
          ],
          "developer": Object {
            "name": "Cozy",
          },
          "icon": "<svg></svg>",
          "isInRegistry": true,
          "name": "Bouilligue",
          "slug": "konnector-bouilligue",
          "type": "konnector",
          "uninstallable": true,
          "versions": Object {
            "beta": Array [
              "0.1.0",
            ],
            "dev": Array [
              "0.1.0",
            ],
            "stable": Array [
              "0.1.0",
            ],
          },
        },
        Object {
          "categories": Array [
            "transport",
          ],
          "developer": Object {
            "name": "Cozy",
          },
          "icon": "<svg></svg>",
          "installed": true,
          "isInRegistry": true,
          "name": "Trinlane",
          "permissions": Object {
            "mock": Object {
              "type": "io.mock.doctype",
            },
          },
          "slug": "konnector-trinlane",
          "tags": Array [
            "transport",
            "files",
            "bills",
          ],
          "type": "konnector",
          "uninstallable": true,
          "version": "0.1.0",
          "versions": Object {
            "beta": Array [
              "0.1.0",
            ],
            "dev": Array [
              "0.1.0",
            ],
            "stable": Array [
              "0.1.0",
            ],
          },
        },
        Object {
          "categories": Array [
            "cozy",
          ],
          "developer": Object {
            "name": "Cozy",
          },
          "editor": "Cozy",
          "icon": "<svg></svg>",
          "isInRegistry": true,
          "name": "Photos",
          "name_prefix": "Cozy",
          "slug": "photos",
          "type": "webapp",
          "uninstallable": true,
          "versions": Object {
            "beta": Array [
              "3.0.0",
            ],
            "dev": Array [
              "3.0.0",
            ],
            "stable": Array [
              "3.0.0",
            ],
          },
        },
        Object {
          "categories": Array [
            "partners",
          ],
          "icon": "<svg></svg>",
          "isInRegistry": true,
          "name": "Tasky",
          "slug": "tasky",
          "type": "webapp",
          "uninstallable": true,
          "versions": Object {
            "beta": Array [
              "1.0.0",
            ],
            "dev": Array [
              "1.0.0",
            ],
            "stable": Array [
              "1.0.0",
            ],
          },
        },
      ]
    }
    isFetching={false}
    parent="discover"
  />
</div>
`;
